Nombre:Proyecto-jsf ,Descripcion:version 1.1 del proyecto desplagado en git,login mejorado ,uso de herramienta primefaces

--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -26,3 +26,10 @@ sirve para poner un color entre la fila
 	background: none repeat scroll 0 0 #F9F9F9;
 	border-top: 1px solid #BBBBBB;
 }
+.centered{
+	width: 50%;
+	
+
+}
+
+          
